# moderate-diva

./: .env  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  cert.pem  docker-compose-build.yaml  docker-compose-dev.yaml  docker-compose-kafka.yaml  docker-compose.build.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
. github/workflows/: registry.yaml
.github/workflows/: mirror.yaml  registry.yaml
aggregator/: Dockerfile  build.gradle
app/: main.py
app/api/: auth.py  stats.py
app/core/: auth.py  stats.py
app/core/proto/: validation_pb2.py
app/model/: dataset.py
app/services/: manager.py
app/utils/: kafka.py  queues.py  settings.py
config/: validation.yaml
connector/mqtt/: Dockerfile  build.gradle
core/: README.md  build.gradle  settings.gradle
core/aggregator/: build.gradle
core/connector/file/: build.gradle
core/connector/mqtt/: build.gradle
core/converter/: Dockerfile  Dockerfile.graal  build.gradle
core/validator/: build.gradle
diva/connector/: Dockerfile  README.md  pyproject.toml
diva/connector/app/model/: dataset.py  message_key.py
diva/connector/app/services/: cron.py  inbound_connector.py
diva/converter/: Dockerfile  requirements.txt
diva/converter/app/: main.py
diva/reporter/: docker-compose.dev.yaml
kafka/: README.md  docker-compose-kraft.yaml  docker-compose-panda.yaml
kafka/secrets/: caroot.pem  client.config  kafka.truststore.jks
processing/anonymization/: build.gradle
secrets/: kafka.keystore.jks
test/: test1.py
validator/: Dockerfile  build.gradle
(+140 files in other folders)
