[tool.poetry]
name = "dq-s3-connector"
version = "0.1.0"
description = "Data Quality Connector for S3 Object Storages"
authors = ["Nicolò Bertozzi <nicolo.bertozzi@linksfoundation.com>"]
license = "Eclipse Public License - v 2.0"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
asyncio = "^3.4.3"
aiologger = "^0.7.0"
aiokafka = "^0.10.0"
pydantic = "^2.6.4"
protobuf = "^5.26.1"
aiohttp = "^3.9.5"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
certifi = "^2024.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
